Update license field in package.json to match LICENSE file
AGPL-3.0 instead of ISC

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/andi-crb/andi-utils.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/andi-crb/andi-utils/issues"
   },
